impl/tests/errors/__snapshots__/test_invalid_operation.ambr
# serializer version: 1
# name: test_binary_op_bool_error_output
  '''
  
  [31m[E01] Error:[0m Invalid operation '+' for types [38;5;201mBool[0m and [38;5;201mBool[0m
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:1:1[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m1 │[0m [38;5;201mt[0m[38;5;201mr[0m[38;5;201mu[0m[38;5;201me[0m[38;5;249m+[0m[38;5;201mf[0m[38;5;201ma[0m[38;5;201ml[0m[38;5;201ms[0m[38;5;201me[0m
   [38;5;240m  │[0m [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m  
   [38;5;240m  │[0m   [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m This is of type [38;5;201mBool[0m
   [38;5;240m  │[0m        [38;5;201m│[0m    
   [38;5;240m  │[0m        [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m This is of type [38;5;201mBool[0m
  [38;5;246m───╯[0m
  
  
  '''
# ---
# name: test_binary_op_bool_int_error_output
  '''
  
  [31m[E01] Error:[0m Invalid operation '+' for types [38;5;201mInt[0m and [38;5;155mBool[0m
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:1:1[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m1 │[0m [38;5;201m2[0m[38;5;201m4[0m[38;5;249m+[0m[38;5;155mf[0m[38;5;155ma[0m[38;5;155ml[0m[38;5;155ms[0m[38;5;155me[0m
   [38;5;240m  │[0m [38;5;201m─[0m[38;5;201m┬[0m [38;5;155m─[0m[38;5;155m─[0m[38;5;155m┬[0m[38;5;155m─[0m[38;5;155m─[0m  
   [38;5;240m  │[0m  [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m This is of type [38;5;201mInt[0m
   [38;5;240m  │[0m      [38;5;155m│[0m    
   [38;5;240m  │[0m      [38;5;155m╰[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m[38;5;155m─[0m This is of type [38;5;155mBool[0m
  [38;5;246m───╯[0m
  
  
  '''
# ---
# name: test_unary_op_bool_error_output
  '''
  
  [31m[E01] Error:[0m Invalid operation '-' for type [38;5;201mBool[0m
     [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mstdin:1:1[38;5;246m][0m
     [38;5;246m│[0m
   [38;5;246m1 │[0m [38;5;249m-[0m[38;5;201mt[0m[38;5;201mr[0m[38;5;201mu[0m[38;5;201me[0m
   [38;5;240m  │[0m  [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m  
   [38;5;240m  │[0m    [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m This is of type [38;5;201mBool[0m
  [38;5;246m───╯[0m
  
  
  '''
# ---
